<resources>
    <string name="app_name">Movies4You</string>

    <string name="cancel">Anuluj</string>
    <string name="accept">Zatwierdź</string>
    <string name="close">Zamknij</string>
    <string name="search">Szukaj</string>
    <string name="show">Pokaż</string>



    <!--LABELS-->
    <string name="label_home">Strona domowa</string>
    <string name="label_my_lists">Moje Listy</string>
    <string name="label_logout">Wyloguj się</string>
    <string name="label_movie_details">Szczegóły filmu</string>
    <string name="label_favorite">Lista ulubionych</string>
    <string name="label_watchlist">Lista obejrzanych</string>
    <string name="label_rated">Lista ocenionych</string>
    <string name="label_other">Własna lista</string>
    <string name="label_popular_tv_shows">Popularne Seriale</string>

    <!--TOASTS-->
    <string name="toast_new_list_empty_title">Tytuł listy nie może pozostać pusty!</string>
    <string name="tast_add_movie_to_list">Film został dodany do listy</string>

    <!--LOGIN-->
    <string name="login_button">Zaloguj się</string>
    <string name="login_as_guest_button">Zaloguj się jako gość</string>
    <string name="login_login_hint">nazwa użytkownika</string>
    <string name="login_password_hint">hasło</string>

    <string name="login_no_account_text">Nie masz konta?</string>
    <string name="login_register">Zarejestruj się</string>


    <!--HOME-->
    <string name="home_vote_result_max_10">%1$.0f/10</string>
    <string name="home_page_label">Ostatnio popularne</string>


    <!--TOP BAR-->
    <string name="topbar_welcome_guest_label">Witaj!</string>
    <string name="topbar_welcome_user_label">Witaj, %s!</string>


    <!--MOVIE DETAILS-->
    <string name="movie_details_label_watched">Obejrzałem</string>
    <string name="movie_details_count_people_vote">oceniło: %d</string>
    <string name="movie_details_details_stats">Budżet: %1$d$ \nData Powstania: %2$s \nOryginalny język: %3$s</string>
    <string name="movie_details_no_description">Film nie posiada jeszcze żadnego opisu</string>
    <string name="movie_details_info_no_data">Film nie posiada jeszcze żadnych recenzji</string>


    <!--RATING DIALOG-->
    <string name="rating_dialog_title">Oceń film</string>
    <string name="rating_dialog_vote_max_10">%1$.0f/10</string>

    <!--PERMISSION DIALOG-->
    <string name="permission_dialog_title">Brak uprawnień</string>
    <string name="permission_dialog_description">Nie posiadasz uprawnień do wykonania tej akcji.</string>
    <string name="permission_dialog_action_text">Zaloguj się jako użytkownik TMDB.</string>

    <!--MY LISTS-->
    <string name="mylists_no_items_available">Nie posiadasz żadnych własnych list.</string>
    <string name="mylists_title">nazwa</string>
    <string name="mylists_description">opis</string>
    <string name="mylists_favorite_title">Ulubione</string>
    <string name="mylists_watchlist_title">Obejrzane</string>
    <string name="mylists_rated_title">Ocenione</string>
    <string name="mylists_add_new_list">Dodaj nową listę</string>
    <string name="delete_list_dialog_title">Usunąć listę?</string>
    <string name="delete_list_dialog_desc">Czy na pewno chcesz usunąć tę listę?</string>
    <string name="clear_list_dialog_title">Wyczyścić listę?</string>
    <string name="clear_list_dialog_desc">Czy na pewno chcesz wyczyścić tę listę?</string>
    <string name="delete_movie_from_list_title">Usunąć film z listy?</string>
    <string name="delete_movie_from_list_description">Czy na pewno chcesz usunąć ten film z listy?</string>


    <string name="dial_confirm_positive_btn">Zatwierdź</string>
    <string name="dial_confirm_negative_btn">Odrzuć</string>
    <string name="label_discover_movies">Wyszukaj filmy</string>

    <!--SEARCH-->
    <string name="search_enter_prefix_hint">Wpisz wyszukiwaną frazę</string>
    <string name="search_suggesstion_dialog_label">Wybierz wyszukaną frazę</string>



    <!--    SORTING DIALOG-->
    <string name="discover_sort_dialog_title">Sortowanie</string>
    <string name="discover_sort_default">Domyślnie</string>
    <string name="discover_sort_popularity">Popularność</string>
    <string name="discover_sort_release_date">Data wydania</string>
    <string name="discover_sort_revenue">Dochód</string>
    <string name="discover_sort_original_title">Oryginalny tytuł</string>
    <string name="discover_sort_vote_average">Ocena</string>
    <string name="discover_sort_vote_count">Ilość ocen</string>
    <string name="order_asc">rosnąco</string>
    <string name="order_desc">malejąco</string>


    <!--    FILTER DIALOG-->
    <string name="search_filter_dialog_popularity_type">popularność</string>
    <string name="search_filter_dialog_min_year">od roku</string>
    <string name="search_filter_dialog_max_year">do roku</string>
    <string name="popularity_low">Niska</string>
    <string name="popularity_medium">Średnia</string>
    <string name="popularity_high">Wysoka</string>

    <string-array name="movie_details_tab_layout_names">
        <item>Opis</item>
        <item>Aktorzy</item>
        <item>Recenzje</item>
    </string-array>


    <string name="list_no_elements">Lista nie posiada żadnych pozycji.</string>

</resources>
