<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <group
            android:id="@+id/basic_menu"
            android:visible="true">

        <item android:id="@+id/homeFragment"
              android:title="@string/label_home"
              android:visible="true"
              android:icon="@drawable/menu_selector"/>

        <item
                android:icon="@drawable/menu_separator"
                android:enabled="false"
                android:checkable="false"
                tools:ignore="MenuTitle"/>

        <item android:id="@+id/popularTvShowsFragment"
                android:title="@string/label_popular_tv_shows"
                android:visible="true"
                android:icon="@drawable/menu_selector"/>

        <item
                android:icon="@drawable/menu_separator"
                android:enabled="false"
                android:checkable="false"
                tools:ignore="MenuTitle"/>

        <item android:id="@+id/myListsFragment"
              android:title="@string/label_my_lists"
              android:visible="true"
              android:icon="@drawable/menu_selector"/>

        <item
                android:id="@+id/myListsSeparator"
                android:icon="@drawable/menu_separator"
                android:enabled="false"
                android:checkable="false"
                tools:ignore="MenuTitle"/>

        <item android:id="@+id/discoverFragment"
              android:title="@string/label_discover_movies"
              android:visible="true"
              android:icon="@drawable/menu_selector"/>

        <item
                android:icon="@drawable/menu_separator"
                android:enabled="false"
                android:checkable="false"
                tools:ignore="MenuTitle"/>


        <item android:id="@+id/menuLogout"
              android:title="@string/label_logout"
              android:visible="true"
              android:icon="@drawable/menu_selector"/>

    </group>
</menu>