<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:background="@drawable/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

        <Spinner
                android:id="@+id/frag_login_language_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
                android:popupBackground="@color/light_gray"
                app:layout_constraintTop_toTopOf="@+id/frag_login_card_view"
                app:layout_constraintEnd_toEndOf="@+id/frag_login_card_view"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/frag_login_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@android:color/transparent"
                android:layout_margin="20dp"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                <ImageView
                        android:src="@drawable/user_icon_big"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/frag_login_input_login_layout"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/login_login_hint"
                        app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/frag_login_input_login_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textCursorDrawable="@null"
                            android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/frag_login_input_password_layout"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password_hint"
                        app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/frag_login_input_password_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textCursorDrawable="@null"
                            android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:id="@+id/login_btn"
                        style="@style/button_open"
                        android:layout_marginTop="8dp"
                        android:text="@string/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <Button
                        android:id="@+id/login_as_guest_btn"
                        style="@style/button_open"
                        android:layout_marginTop="16dp"
                        android:text="@string/login_as_guest_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
                android:id="@+id/bottom_text_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/frag_login_card_view"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/login_no_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/basic_text"
                    android:layout_marginEnd="4dp"/>

            <TextView
                    android:id="@+id/frag_login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_register"
                    android:textColor="@color/header_text"/>

        </LinearLayout>

        <ProgressBar
                android:id="@+id/frag_login_progress_bar"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
