<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_rounded"
        android:padding="20dp">

    <ImageView
            android:id="@+id/app_rating_dialog_header_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/big_star_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/app_rating_dialog_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/rating_dialog_title"
            android:textColor="@color/header_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/app_rating_dialog_header_image"
            app:layout_constraintEnd_toStartOf="@+id/app_rating_dialog_rate_text"
            app:layout_constraintStart_toEndOf="@+id/app_rating_dialog_header_image"
            app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
            android:id="@+id/app_rating_dialog_ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="20dp"
            android:numStars="10"
            android:progressDrawable="@drawable/rating_bar_big"
            android:scaleX="1.2"
            android:scaleY="1"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_rating_dialog_title" />


    <TextView
            android:id="@+id/app_rating_dialog_rate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:textColor="@color/basic_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/app_rating_dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="3/10" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_in_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    <Button
            android:id="@+id/app_rating_dialog_cancel_btn"
            style="@style/button_open"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_in_center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_rating_dialog_ratingbar" />


    <Button
            android:id="@+id/app_rating_dialog_accept_btn"
            style="@style/button_open"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical_in_center"
            app:layout_constraintTop_toBottomOf="@+id/app_rating_dialog_ratingbar" />

</androidx.constraintlayout.widget.ConstraintLayout>